1) Fixing HistoryElement annotation for getChangedPersonValues 2) Fixing Google shit code and enabling google tracker to fetch ALL bugs. getNextLink() of google API returns null even though it should not. I filed a ticket (see http://code.google.com/p/support/issues/detail?id=5377) 3) Updated to the newest google-api-client version